# maddr-api

./: .gitignore  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 0a3b81d2908e_add_book_table.py  0e7b980efcc9_create_account_table.py  1bc8a193d396_atualizando.py  521a8c97c8d0_create_tables.py  9f68c1803af6_adiciona_relacionamento_entre_book_e_.py  ae6e9ad009b0_add_author_table.py  cec21cc157f7_add_author_table.py  dc1cc5612a1d_add_book_table.py
src/maddr_api/: app.py
src/maddr_api/config/: database.py
src/maddr_api/models/: __init__.py  account.py  author.py  book.py  books.py  novelist.py
src/maddr_api/routers/: account.py  author.py  book.py  novelist.py  token.py
src/maddr_api/schemas/: account.py  author.py  book.py  novelist.py  token.py
src/maddr_api/security/: access_token.py  get_current_user.py
src/maddr_api/services/: account.py  author.py  book.py  main.py  novelist.py  token.py
src/maddr_api/utils/: sanitization.py
tests/: conftest.py  test_account.py  test_app.py  test_author.py  test_book.py  test_database.py  test_security.py  test_token.py
